--- a/MyDrawings.html
+++ b/MyDrawings.html
@@ -9,7 +9,7 @@
 
 <body>
 <h3>My Drawings</h3>
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\bb8.png" width=200 height=280 />
+<img src="https://github.com/sbshwetabhatt/KRai/blob/master/Images/bb8.png" width=200 height=280 />
 <img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\ewok.png" width=200 height=280 />
 <img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\kyloren.png" width=200 height=280 />
 <img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\lukeskywalker.png" width=200 height=280 />
