--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ width: 5%;
     <tr>
       <td>
         <h1>Karthik Rai</h1>
-  <img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\profileimage.png" alt="Karthik's Profile Pic" width="200" height="200"></img>
+  <img src="https://github.com/sbshwetabhatt/KRai/blob/master/Images/profileimage.png" width="200" height="200"></img>
   <p></td>
     <td>
     <center>
