--- a/MyDrawings.html
+++ b/MyDrawings.html
@@ -9,19 +9,19 @@
 
 <body>
 <h3>My Drawings</h3>
-<img src="https://github.com/sbshwetabhatt/KRai/blob/master/Images/bb8.png"/>
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\ewok.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\kyloren.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\lukeskywalker.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\yoda.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\darthvader.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\dragon.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\statueofliberty.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\captainamerica.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\catboy.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\piggy.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\sheep.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\ducky.png" width=200 height=280 />
-<img src="C:\Users\pprab\Downloads\Java Tutorials\Web Development\HTML - Personal Site\Images\thor.jpeg" width=200 height=280 />
+<img src="Images/bb8.png"/>
+<img src="Images\ewok.png" width=200 height=280 />
+<img src="Images\kyloren.png" width=200 height=280 />
+<img src="Images\lukeskywalker.png" width=200 height=280 />
+<img src="Images\yoda.png" width=200 height=280 />
+<img src="Images\darthvader.png" width=200 height=280 />
+<img src="Images\dragon.png" width=200 height=280 />
+<img src="Images\statueofliberty.png" width=200 height=280 />
+<img src="Images\captainamerica.png" width=200 height=280 />
+<img src="Images\catboy.png" width=200 height=280 />
+<img src="Images\piggy.png" width=200 height=280 />
+<img src="Images\sheep.png" width=200 height=280 />
+<img src="Images\ducky.png" width=200 height=280 />
+<img src="Images\thor.jpeg" width=200 height=280 />
 </body>
 </html>
