--- a/MyDrawings.html
+++ b/MyDrawings.html
@@ -9,7 +9,7 @@
 
 <body>
 <h3>My Drawings</h3>
-<img src="Images/bb8.png"/>
+<img src="Images/bb8.png" width=200 height=280 />
 <img src="Images\ewok.png" width=200 height=280 />
 <img src="Images\kyloren.png" width=200 height=280 />
 <img src="Images\lukeskywalker.png" width=200 height=280 />
